--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="imagenPrincipal">
+        <div class="PrimeraParteImagen">
+            <img class="imagen1" src="figuras/portada1.gif" alt="portada1" >
+            <img class="imagen2" src="figuras/portada2.gif" alt="portada2" >
+            <img class="imagen3" src="figuras/portada3.gif" alt="portada3" >
+        </div>
+        <div class="SegundaParteImagen">
+            <img src="figuras/portada4.gif" alt="portada4">
+            <img src="figuras/portada5.gif" alt="portada5">
+            <img src="figuras/portada6.gif" alt="portada6">
+        </div>
+        
+    </div>
     
 </body>
 </html>
