--- a/personal.html
+++ b/personal.html
@@ -16,6 +16,12 @@
         </div>
     </header>
 
+    <main>
+        <div class="textoInformacion">
+            <p>Nuestro personal se encuentra ampliamente capacitado en resolver sus dudas y problemas en la compra, transporte y manejo de todas las plantas y productos que manejamos.</p>
+            <p>Nuestro servicio a clientes está disponible las 24 horas del día, los 365 días del año.</p>
+        </div>
+    </main>
 
     <footer>
         <div class="footerCompleto">
@@ -29,6 +35,9 @@
             </div>
             <div class="apartados">
                 <p> &lt; Cátalogo | Compras | Personal | Ofertas | Personalizar | Comentarios &gt;</p>
+            </div>
+            <div class="barraImagen">
+                <img src="figuras/barra.gif" alt="barra">
             </div>
         </div>
     </footer>
