primeros dos xd

--- a/index.html
+++ b/index.html
@@ -8,8 +8,55 @@
     <title>Document</title>
 </head>
 <body>
-
     
+    <header>
+        <div class="cabecera">
+            <img src="figuras/floreria.png" alt="logo">
+            <h1>Jardines y Flores</h1>
+            <img src="figuras/floreria.png" alt="logo">
+        </div>
+    </header>
+
+    <main>
+        <div class="imagenGrande">
+            <div class="categorias">
+                <p>Ofertas</p>
+                <p>Personalizar</p>
+                <p>Comentarios</p>
+            </div>
+            <div class="primeraParte">
+                <img src="figuras/portada1.gif" alt="portada1">
+                <img src="figuras/portada2.gif" alt="portada2">
+                <img src="figuras/portada3.gif" alt="portada3">
+            </div>
+            <div class="segundaParte">
+                <img src="figuras/portada4.gif" alt="portada4">
+                <img src="figuras/portada5.gif" alt="portada5">
+                <img src="figuras/portada6.gif" alt="portada6">
+            </div>
+            <div class="terceraParte">
+                <img src="figuras/portada7.gif" alt="portada7">
+                <div class="portada7">
+                    <img src="figuras/catalogo.gif" alt="catalogo">
+                    <img src="figuras/compras.gif" alt="compras">
+                    <img src="figuras/personal.gif" alt="personal">
+                </div>
+                <img src="figuras/portada8.gif" alt="portada8">
+            </div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footerCompleto">
+            <div class="apartados">
+                <p> &lt; Cátalogo | Compras | Personal | Ofertas | Personalizar | Comentarios &gt;</p>
+            </div>
+            <div class="barraImagen">
+                <img src="figuras/barra.gif" alt="barra">
+            </div>
+        </div>
+
+    </footer>
     
 </body>
 </html>
