--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>Document</title>
+    <title>Index</title>
 </head>
 <body>
     
@@ -55,7 +55,6 @@
                 <img src="figuras/barra.gif" alt="barra">
             </div>
         </div>
-
     </footer>
     
 </body>
