--- a/catalogo.html
+++ b/catalogo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo</title>
-    <link rel="stylesheet" href="estiloCatalogo.css">
+    <link rel="stylesheet" href="Catalogo.css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@
                     <p>Varios Colores</p>
                     <p>$3.00 c/u</p>
                 </div>
-                <img src="figuras/catalogo/planta1.gif" alt="planta1">
+                <a href="Anemona.html"><img src="figuras/catalogo/planta1.gif" alt="planta1"></a>
             </div>
             <div class="cuadro2">
                 <div class="datosFlores">
@@ -32,7 +32,7 @@
                     <p>Color Morado</p>
                     <p>$5.00 c/u</p>
                 </div>
-                <img src="figuras/catalogo/planta2.gif" alt="planta2">
+                <a href="Jacinto.html"><img src="figuras/catalogo/planta2.gif" alt="planta2"></a>
             </div>
             <div class="cuadro3">
                 <div class="datosFlores">
@@ -40,7 +40,7 @@
                     <p>Varios Colores</p>
                     <p>$50.00 c/u</p>
                 </div>
-                <img src="figuras/catalogo/planta3.gif" alt="planta3">
+                <a href="Clematis.html"><img src="figuras/catalogo/planta3.gif" alt="planta3"></a>
             </div>
             <div class="cuadro4">
                 <div class="datosFlores">
@@ -48,7 +48,7 @@
                     <p>Varios Modelos</p>
                     <p>$100.00 c/u</p>
                 </div>
-                <img src="figuras/catalogo/planta4.gif" alt="planta4">
+                <a href="MacetaItaliana.html"><img src="figuras/catalogo/planta4.gif" alt="planta4"></a>
             </div>
             <div class="cuadro5">
                 <div class="datosFlores">
@@ -56,7 +56,7 @@
                     <p>Varios Colores</p>
                     <p>$15.00 c/u</p>
                 </div>
-                <img src="figuras/catalogo/planta5.gif" alt="planta5">
+                <a href="Iris.html"><img src="figuras/catalogo/planta5.gif" alt="planta5"></a>
             </div>
             <div class="cuadro6">
                 <div class="datosFlores">
@@ -64,7 +64,7 @@
                     <p>Varios Colores</p>
                     <p>$10.00 c/u</p>
                 </div>
-                <img src="figuras/catalogo/planta6.gif" alt="planta6">                
+                <a href="Tulipan.html"><img src="figuras/catalogo/planta6.gif" alt="planta6"></a>                
             </div>
         </div>
     </main>
