--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="indexStyle.css">
     <title>Index</title>
 </head>
 <body>
@@ -37,9 +37,9 @@
             <div class="terceraParte">
                 <img src="figuras/portada7.gif" alt="portada7">
                 <div class="portada7">
-                    <img src="figuras/catalogo.gif" alt="catalogo">
-                    <img src="figuras/compras.gif" alt="compras">
-                    <img src="figuras/personal.gif" alt="personal">
+                    <a href="Catalogo.html"><img src="figuras/catalogo.gif" alt="catalogo"></a>
+                    <a href=""><img src="figuras/compras.gif" alt="compras"></a>
+                    <a href="Personal.html"><img src="figuras/personal.gif" alt="personal"></a>
                 </div>
                 <img src="figuras/portada8.gif" alt="portada8">
             </div>
