--- a/MacetaItaliana.html
+++ b/MacetaItaliana.html
@@ -26,7 +26,7 @@
     <footer>
         <div class="footerCompleto">
             <div class="apartados">
-                <p> &lt; Cátalogo | Compras | Personal | Ofertas | Personalizar | Comentarios &gt;</p>
+                <p> &lt; Cátalogo | Compras | Personal | Ofertas | Personalizar | Comentarios |<a href="Contacto.html"> Contacto</a>|<a href="Registro.html"> Registro</a> &gt;</p>
             </div>
             <div class="barraImagen">
                 <img src="figuras/barra.gif" alt="barra">
