--- a/personal.html
+++ b/personal.html
@@ -34,7 +34,8 @@
                 <p class="info">Fax: 01-800-faxplantas</p>
             </div>
             <div class="apartados">
-                <p> &lt; Cátalogo | Compras | Personal | Ofertas | Personalizar | Comentarios &gt;</p>
+                <p> &lt; Cátalogo | Compras | Personal | Ofertas | Personalizar | Comentarios |<a href="Contacto.html"> Contacto</a>|<a href="Registro.html"> Registro</a> &gt;</p>
+                
             </div>
             <div class="barraImagen">
                 <img src="figuras/barra.gif" alt="barra">
